# Deadstorm

./: CMakeLists.txt  Deadstorm.files  Deadstorm.includes  README.md  build.bat  build.sh
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
game/: CMakeLists.txt
game/assets/: textures.xml
game/include/: Actor.hpp  AnimSprite.hpp  AnimSprite.inl  Application.hpp  Deadstorm.hpp  Defines.hpp  GamePlayState.hpp  GameplayState.hpp  MenuState.hpp  MovingSprite.hpp  MovingSprite.inl  NPC.hpp  PreloaderState.hpp  Sprite.hpp  Sprite.inl
game/include/tools/: Math.hpp
game/src/: Actor.cpp  AnimSprite.cpp  Application.cpp  Deadstorm.cpp  GamePlayState.cpp  GameplayState.cpp  MenuState.cpp  MovingSprite.cpp  NPC.cpp  PreloaderState.cpp  Sprite.cpp  main.cpp
game/src/main/: main.cpp
lib/: CMakeLists.txt
lib/gem/: Action.hpp  Application.hpp  Bounce.cpp  Bounce.hpp  Content.cpp  Content.hpp  Easing.hpp  FiniteAction.hpp  Game.cpp  Game.hpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  GameStateManager.inl  Graphics.hpp  Input.hpp  Interpolator.hpp  Point.cpp  Point.hpp  Rectangle.hpp  Repeat.cpp  Repeat.hpp  Sequence.cpp  Sequence.hpp  Signal.hpp  Stack.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp  StateMachine.inl  TexturePart.cpp  Tween.hpp
lib/gem/detail/: SdlGraphics.cpp  SdlGraphics.hpp  SdlMain.cpp  SdlTexture.cpp  SdlTexture.hpp
test/: CMakeLists.txt
test/src/Deadstorm/: MovingTest.cpp
test/src/game/: JustTestTest.cpp
